initial test prototype/check install only, pt2

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,13 +1,13 @@
 {
-    "VISION5E.DetectEvilAndGood": "Detect Evil and Good",
-    "VISION5E.DetectMagic": "Detect Magic",
-    "VISION5E.DetectPoisonAndDisease": "Detect Poison and Disease",
-    "VISION5E.DetectThoughts": "Detect Thoughts",
-    "VISION5E.DevilsSight": "Devil's Sight",
-    "VISION5E.Echolocation": "Echolocation",
-    "VISION5E.GhostlyGaze": "Ghostly Gaze",
-    "VISION5E.Hearing": "Hearing",
-    "VISION5E.Inaudible": "Inaudible",
-    "VISION5E.LightPerception": "Light Perception",
-    "VISION5E.UmbralSight": "Umbral Sight"
+    "VISIONED4.DetectEvilAndGood": "Detect Evil and Good",
+    "VISIONED4.DetectMagic": "Detect Magic",
+    "VISIONED4.DetectPoisonAndDisease": "Detect Poison and Disease",
+    "VISIONED4.DetectThoughts": "Detect Thoughts",
+    "VISIONED4.DevilsSight": "Devil's Sight",
+    "VISIONED4.Echolocation": "Echolocation",
+    "VISIONED4.GhostlyGaze": "Ghostly Gaze",
+    "VISIONED4.Hearing": "Hearing",
+    "VISIONED4.Inaudible": "Inaudible",
+    "VISIONED4.LightPerception": "Light Perception",
+    "VISIONED4.UmbralSight": "Umbral Sight"
 }
